--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "webpack": "^5.25.0",
-    "webpack-cli": "^4.5.0"
-  },
-  "name": "what-to-cook-today",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/emiribegic/what-to-cook-today.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/emiribegic/what-to-cook-today/issues"
-  },
-  "homepage": "https://github.com/emiribegic/what-to-cook-today#readme",
-  "description": ""
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"webpack": "^5.25.0",
+		"webpack-cli": "^4.5.0"
+	},
+	"name": "what-to-cook-today",
+	"version": "1.0.0",
+	"main": "index.js",
+	"devDependencies": {},
+	"scripts": {
+		"start": "node src/server/index.js",
+		"build": "webpack"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/emiribegic/what-to-cook-today.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/emiribegic/what-to-cook-today/issues"
+	},
+	"homepage": "https://github.com/emiribegic/what-to-cook-today#readme",
+	"description": ""
 }
