--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
 	"name": "what-to-cook-today",
 	"version": "1.0.0",
 	"main": "index.js",
-	"devDependencies": {},
+	"devDependencies": {
+		"@babel/core": "^7.13.10",
+		"@babel/preset-env": "^7.13.10",
+		"babel-loader": "^8.2.2"
+	},
 	"scripts": {
 		"start": "node src/server/index.js",
 		"build": "webpack"
