--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"html-webpack-plugin": "^5.3.1"
 	},
 	"scripts": {
-		"start": "node src/server/index.js",
-		"build": "webpack"
+		"prod": "webpack --config webpack.prod.js",
+		"dev": "webpack-dev-server  --config webpack.dev.js --open"
 	},
 	"repository": {
 		"type": "git",
