--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	},
 	"scripts": {
 		"prod": "webpack --config webpack.prod.js",
-		"dev": "webpack-dev-server  --config webpack.dev.js --open"
+		"dev": "webpack serve --config webpack.dev.js --open"
 	},
 	"repository": {
 		"type": "git",
