--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^5.1.2",
+		"css-minimizer-webpack-plugin": "^1.2.0",
 		"html-webpack-plugin": "^5.3.1",
+		"mini-css-extract-plugin": "^1.3.9",
 		"node-sass": "^5.0.0",
 		"sass-loader": "^11.0.1",
 		"style-loader": "^2.0.0",
+		"terser-webpack-plugin": "^5.1.1",
 		"webpack-dev-server": "^3.11.2"
 	},
 	"scripts": {
