--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"webpack-dev-server": "^3.11.2"
 	},
 	"scripts": {
+		"start": "node src/server/index.js",
 		"prod": "webpack --config webpack.prod.js",
 		"dev": "webpack serve --config webpack.dev.js --open"
 	},
