--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@tabler/icons": "^1.39.1",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
@@ -22,6 +23,7 @@
 		"node-sass": "^5.0.0",
 		"sass-loader": "^11.0.1",
 		"style-loader": "^2.0.0",
+		"svg-url-loader": "^7.1.1",
 		"terser-webpack-plugin": "^5.1.1",
 		"webpack-dev-server": "^3.11.2"
 	},
