--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 	"main": "index.js",
 	"devDependencies": {
 		"@babel/core": "^7.13.10",
+		"@babel/plugin-proposal-class-properties": "^7.13.0",
+		"@babel/plugin-proposal-private-methods": "^7.13.0",
+		"@babel/plugin-proposal-private-property-in-object": "^7.13.0",
 		"@babel/preset-env": "^7.13.10",
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
