--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"humanize-duration": "^3.25.1",
 		"node-fetch": "^2.6.1",
 		"regenerator-runtime": "^0.13.7",
 		"webpack": "^5.25.0",
